[metadata]
name = xcmp
version = attr: xcmp.__version__
keywords = compare
description = Compare any objects.
author = Mingzhe Zou
author_email = zoumingzhe@outlook.com
url = https://github.com/bondbox/xcmp
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/bondbox/xcmp
    Bug Tracker = https://github.com/bondbox/xcmp/issues
    Documentation = https://github.com/bondbox/xcmp

[options]
zip_safe = True
include_package_data = True,
python_requires = >=3.8
install_requires =
    xarg-python >= 1.0
packages = find:

[options.entry_points]
console_scripts =
    xcmp-file = xcmp.commands.file:main
    xcmp-image = xcmp.commands.image:main

[options.packages.find]
include = xcmp*
exclude =
    test
